--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on the Zen Journey to Spiritual Awakening</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -937,7 +937,7 @@
                     <div class="video-info">
                         <h3>The second tier of our Seed Allocation Programme - DarwinIA Gold</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -948,7 +948,7 @@
                     <div class="video-info">
                         <h3>The Monthly Seed Allocation Programme - DarwinIA SILVER</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2283,7 +2283,7 @@
                     <div class="video-info">
                         <h3>This transformed his ball striking immediately</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5369,7 +5369,7 @@
                         <div class="video-info">
                             <h3>The second tier of our Seed Allocation Programme - DarwinIA Gold</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -5380,7 +5380,7 @@
                         <div class="video-info">
                             <h3>The Monthly Seed Allocation Programme - DarwinIA SILVER</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on the Zen Journey to Spiritual Awakening</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9456,7 +9456,7 @@
                         <div class="video-info">
                             <h3>This transformed his ball striking immediately</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
