--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>When Pizza Becomes a Sandwich… Magic Happens 🤌🔥 #shorts #pizza #italy</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -8757,7 +8757,7 @@
                         <div class="video-info">
                             <h3>When Pizza Becomes a Sandwich… Magic Happens 🤌🔥 #shorts #pizza #italy</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
