--- a/index.html
+++ b/index.html
@@ -1557,7 +1557,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>Chef Plating Duck Breast : Fine Dining 👨‍🍳🤤🦆🔥 #chef #cooking #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 09, 2025</div>
                     </div>
                 </a>
             </div>
@@ -8999,7 +8999,7 @@
                         <div class="video-info">
                             <h3>Chef Plating Duck Breast : Fine Dining 👨‍🍳🤤🦆🔥 #chef #cooking #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 09, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9682,7 +9682,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
