--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Philly Hoagie Rolls Like You’ve Never Seen 😳 New Recipe Dropping Soon! #bread #asmr #baking</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>What's the Probability of a 10x Stock?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Your favorite? 40sec -1 - 2 - 3 - 4 - 5 or 7min. ?</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -651,7 +651,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2316,7 +2316,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN FINALLY PLAY PEAK</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 09, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>What's the Probability of a 10x Stock?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Philly Hoagie Rolls Like You’ve Never Seen 😳 New Recipe Dropping Soon! #bread #asmr #baking</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>Your favorite? 40sec -1 - 2 - 3 - 4 - 5 or 7min. ?</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8790,7 +8790,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9781,7 +9781,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN FINALLY PLAY PEAK</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 09, 2025</div>
                         </div>
                     </a>
                 </div>
