--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>You Must Become Famous | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -431,7 +431,7 @@
                     <div class="video-info">
                         <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -618,7 +618,7 @@
                     <div class="video-info">
                         <h3>Kundalini Yoga: The Most Dangerous Form of Yoga | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -882,7 +882,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Strategy Development with Edgewonk - 02.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5358,7 +5358,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Strategy Development with Edgewonk - 02.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>You Must Become Famous | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7392,7 +7392,7 @@
                         <div class="video-info">
                             <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7480,7 +7480,7 @@
                         <div class="video-info">
                             <h3>Kundalini Yoga: The Most Dangerous Form of Yoga | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
