--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Not Closing - The Path to Unconditional Love</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">47 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>You Must Become Famous | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>I can Finally Live off Trading only (Full Breakdown)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How to Stop Judging and Start Living in Presence | Eckhart Tolle on Peace & Inner Freedom (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Slippage & Commission: Trading Costs Explained! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -508,7 +508,7 @@
                     <div class="video-info">
                         <h3>The Truth About Day Trading</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -607,7 +607,7 @@
                     <div class="video-info">
                         <h3>Are Labour Unlucky (or are they just rubbish)?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -739,7 +739,7 @@
                     <div class="video-info">
                         <h3>Why aren't more traders profitable?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -750,7 +750,7 @@
                     <div class="video-info">
                         <h3>Trendline analysis of the US Dollar...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1513,7 +1513,7 @@
                     <div class="video-info">
                         <h3>My message to Reform supporters</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>I can Finally Live off Trading only (Full Breakdown)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Slippage & Commission: Trading Costs Explained! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5193,7 +5193,7 @@
                         <div class="video-info">
                             <h3>The Truth About Day Trading</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5237,7 +5237,7 @@
                         <div class="video-info">
                             <h3>Are Labour Unlucky (or are they just rubbish)?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5281,7 +5281,7 @@
                         <div class="video-info">
                             <h3>Why aren't more traders profitable?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5292,7 +5292,7 @@
                         <div class="video-info">
                             <h3>Trendline analysis of the US Dollar...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5703,7 +5703,7 @@
                         <div class="video-info">
                             <h3>My message to Reform supporters</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Not Closing - The Path to Unconditional Love</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">47 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>You Must Become Famous | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>How to Stop Judging and Start Living in Presence | Eckhart Tolle on Peace & Inner Freedom (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
