--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Why Labour are so unpopular</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">48 minutes ago</div>
+                        <div class="date">58 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Take This Commitment on #WorldMentalHealthDay | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>GINGE STINKER!!!!!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1502,7 +1502,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why Labour are so unpopular</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">48 minutes ago</div>
+                            <div class="date">58 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Take This Commitment on #WorldMentalHealthDay | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7733,7 +7733,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>GINGE STINKER!!!!!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
