--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST ASIA TOUR!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">12 minutes ago</div>
+                        <div class="date">22 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Why Labour are so unpopular</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>This transformed his ball striking immediately</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 11, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Why Labour are so unpopular</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9456,7 +9456,7 @@
                         <div class="video-info">
                             <h3>This transformed his ball striking immediately</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 11, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST ASIA TOUR!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">12 minutes ago</div>
+                            <div class="date">22 minutes ago</div>
                         </div>
                     </a>
                 </div>
